# lelapa-demos-unitech

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
data/: categorized_faqs.json  emfuleni_faqs.json  eskom_faqs.json  eskom_faqs_categorized.json
src/lelapa_demos_unitech/: client.py  data.py  faq_bot.py  file.py  intents.py  main.py  query_processor.py  scraper.py  vulabula.py
tests/: test_client.py  test_main.py
