[project]
name = "lelapa-demos-unitech"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mzwandile Dlomo", email = "world.mjdlomo@gmail.com"},
]
dependencies = [
    "flask>=3.0.3",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
