[project]
name = "lelapa-demos-unitech"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Mzwandile Dlomo", email = "world.mjdlomo@gmail.com"},
]
dependencies = [
    "flask>=3.0.3",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "vulavula>=0.4.0",
    "fuzzywuzzy>=0.18.0",
    "langdetect>=1.0.9",
    "reportlab>=4.2.2",
    "fpdf2>=2.7.9",
    "fastapi>=0.112.0",
    "uvicorn>=0.30.6",
    "tenacity>=9.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

# Add this section
[tool.pdm.scripts]
start = "uvicorn src.lelapa_demos_unitech.main:app --reload"
